--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,10 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Project Files
 .DS_Store
+dotDictionaryData.json
 
 # Runtime data
 pids
