--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "electron": "^1.7.9"
   },
   "devDependencies": {
-    "electron-reload": "^1.2.2"
+    "electron-reload": "^1.2.2",
+    "node-fetch": "^1.7.3"
   }
 }
