search while typing

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "electron": "^1.7.9"
+    "electron": "^1.7.9",
+    "node-fetch": "^1.7.3"
   },
   "devDependencies": {
     "electron-reload": "^1.2.2",
