--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
   "license": "MIT",
   "dependencies": {
     "electron": "^1.7.9",
+    "google-translate-api": "^2.3.0",
     "node-fetch": "^1.7.3"
   },
   "devDependencies": {
-    "electron-reload": "^1.2.2",
-    "node-fetch": "^1.7.3"
+    "electron-reload": "^1.2.2"
   }
 }
