--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "dependencies": {
     "electron": "^1.7.9",
+    "google-translate-api": "^2.3.0",
     "node-fetch": "^1.7.3"
   },
   "devDependencies": {
